# trading_engine

./: .gitignore  CMakeLists.txt  README.md
benchmark/: orderbook_benchmark.cpp
include/: logger.hpp  matching_engine.hpp  mpmc_queue.hpp  order.hpp  order_book.hpp  spscqueue.hpp  trade.hpp
scripts/: analyze_trades.py  trades_parsed.csv
src/: main.cpp  matching_engine.cpp  mpmc_queue.cpp  order_book.cpp  spscqueue.tpp
tests/: engine_test.cpp  orderbook_test.cpp
